--- a/styles/larger.css
+++ b/styles/larger.css
@@ -3,9 +3,13 @@
         max-width: 100%;
         background-color: slategray;
         color: white;
+    
     }
     nav ul{
         list-style: none;
+        display: flex;
+        align-content: stretch;
+        align-items: center;
     }
     nav ul a{
         color: white;
@@ -14,5 +18,34 @@
     nav a:hover{
         border: 3px solid white;
     }
+    main{
+        display: grid;
+        width: 100%;
+        gap: 40px;
+        grid-column: 2;
+        grid-template-rows: 3;
+    }
+    main h2{
+        grid-row: 1/2;
+        grid-column: 1/3;
+        grid-gap: 50px;
+        width: 100%;
 
+    }
+    
+    #learning-activity{
+        grid-column: 1/2;
+        grid-row: 2/3;
+        text-align: left;
+    }
+    #info{
+        grid-row: 2/3;
+
+    }
+
+    .card{
+        margin: 10px;
+    }
 }
+
+
