--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,9 +1,28 @@
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 450px) {
+    body{
+        display: grid;
+        grid-template-rows: 25% 5% 65% 5%;
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+    }
+    header{
+        grid-row: 1/2;
+        background-color: lightblue;
+        display: flex;
+        align-items: center;
+        justify-content: center; 
+    }
+    header img{
+        border-radius: 10%;
+        width: 15%;
+        height: auto;
+    }
     nav{
+        grid-row: 2/3;
         max-width: 100%;
         background-color: slategray;
         color: white;
-    
     }
     nav ul{
         list-style: none;
@@ -18,34 +37,48 @@
     nav a:hover{
         border: 3px solid white;
     }
+    main h2{
+        
+    }
     main{
         display: grid;
+        grid-row: 3/4;
+        grid-template-columns: 2;
+        grid-template-rows: 10% 80%;
         width: 100%;
-        gap: 40px;
-        grid-column: 2;
-        grid-template-rows: 3;
+        gap: 10px;
+    }
+    section h2{
+       
+        width: 100%;
+        grid-row: 2/3;
     }
     main h2{
-        grid-row: 1/2;
         grid-column: 1/3;
-        grid-gap: 50px;
-        width: 100%;
-
+        
     }
-    
     #learning-activity{
-        grid-column: 1/2;
-        grid-row: 2/3;
-        text-align: left;
+        
+        text-align: center;
     }
     #info{
-        grid-row: 2/3;
+       
+       text-align: center;
 
     }
 
     .card{
-        margin: 10px;
+    
+        width: 100%;
+        height: 100%;
+        grid-row: 2/4;
     }
+    footer{
+        margin-top: 10px;
+        grid-row: 4/5;
+    }
+    
+
 }
 
 
