margins left box

--- a/styles/larger.css
+++ b/styles/larger.css
@@ -58,10 +58,12 @@
     #learning-activity{
         
         text-align: center;
+        margin-left: 10px;
     }
     #info{
        
        text-align: center;
+       
 
     }
 
