--- a/week02/styles/design.css
+++ b/week02/styles/design.css
@@ -9,7 +9,7 @@ footer {
 	margin: 0 auto;
 }
 
-marquee {
+.banner {
 	padding: 1rem;
 	background-color: #eee;
 }
@@ -20,11 +20,14 @@ h1 {
 
 main {
 	display: grid;
+	grid-template-columns: 50% 50%;
 }
 
 h2 {
 	color: navy;
-	text-align: center;
+	text-align: left;
+	grid-column: 1/3;
+	width: 100%;
 }
 
 article p {
@@ -32,13 +35,14 @@ article p {
 }
 
 .callout {
-	color: #777;
+	color: white;
 	background-color: #702963;
+	padding: 5px;
 }
 
 footer {
 	margin-top: 1rem;
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
 	font-size: smaller;
-	text-align: right;
+	text-align: left;
 }
