--- a/styles/larger.css
+++ b/styles/larger.css
@@ -22,7 +22,7 @@
     nav{
         grid-row: 2/3;
         max-width: 100%;
-        background-color: slategray;
+        background-color: #313D41;
         color: white;
     }
     nav ul{
@@ -32,11 +32,11 @@
         align-items: center;
     }
     nav ul a{
-        color: white;
-        border: 1px solid slategray;
+        color: lightblue;
+
     }
     nav a:hover{
-        border: 3px solid white;
+        border: 1px solid white;
     }
     
     main{
@@ -47,12 +47,13 @@
         gap: 10px;
     }
     section h2{
-       
+        color: #313D41;
         width: 100%;
         grid-row: 2/3;
     }
     main h2{
         grid-column: 1/3;
+        color: #313D41;
         
     }
     #learning-activity{
