--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,7 +1,7 @@
-@media screen and (min-width: 450px) {
+@media screen and (min-width: 512px) {
     body{
         display: grid;
-        grid-template-rows: 25% 5% 65% 5%;
+        grid-template-rows: 30% 2.5% 65% 2.5%;
         margin: 0;
         padding: 0;
         height: 100vh;
@@ -9,15 +9,31 @@
     header{
         grid-row: 1/2;
         background-color: lightblue;
-        display: flex;
+        display: grid;
         align-items: center;
         justify-content: center; 
-        flex-direction: column;
+        grid-template-columns: 80% 20%;
+        grid-row: 1/2;
+    }
+    header h1{
+        grid-column: 1/2;
     }
 
-    header img{
-        width: 10%;
+    header button{
+        grid-column: 1/2;
+        width: 50%;
         height: auto;
+        grid-row: 1/2;
+       
+    }
+    header img{
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+        grid-column: 2/3;
+        grid-row: 1/2;
+        margin: 10px;
     }
     nav{
         grid-row: 2/3;
@@ -30,7 +46,32 @@
         display: flex;
         align-content: stretch;
         align-items: center;
+        justify-content: center;
+        justify-items: center;
     }
+
+    #nav-menu{
+        font-size: 1rem;
+        background-color: #313D41;
+        color: #fff;
+        margin: auto;
+        padding: 3px;
+    }
+    .nav li{
+        display: flex;
+        justify-content: center;
+       
+    }
+
+    .nav{
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+        background-color: #fff;
+        color: #000;
+       
+    }
+
     nav ul a{
         color: lightblue;
 
@@ -38,14 +79,19 @@
     nav a:hover{
         border: 1px solid white;
     }
-    
+    #menu{
+        display: none;
+    }
+   
     main{
+        margin: 0;
         display: grid;
         grid-row: 3/4;
         grid-template-rows: 10% 80%;
         width: 100%;
-        gap: 10px;
+        gap: 20px;
     }
+
     section h2{
         color: #313D41;
         width: 100%;
@@ -57,15 +103,14 @@
         
     }
     #learning-activity{
-        
         text-align: center;
         margin-left: 10px;
+        grid-column: 1/2;
     }
     #info{
        
        text-align: center;
-       
-
+        grid-column: 2/3;
     }
 
     .card{
