--- a/week01/styles/site-plan.css
+++ b/week01/styles/site-plan.css
@@ -6,11 +6,11 @@ h1{
     width: 100px;
     background-color: #235789;
 }
-.box2{
+/* .box2{
     height: 100px;
     width: 100px;
     background-color: #679289;
-}
+} */
 .box3{
     height: 100px;
     width: 100px;
