--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -11,7 +11,8 @@ header{
     text-align: center;
     background-color: #235789;
     margin-top: 0;
-
+    margin: 0;
+    color: white;
 }
 
 header img{
@@ -27,6 +28,7 @@ header h3{
     top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
+    color: white;
 }
 
 
@@ -50,6 +52,7 @@ nav a{
 
 h1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 0;
 }
 
 main{
@@ -60,6 +63,13 @@ main{
 
 footer{
     grid-row: 4/5;
+    text-align: center;
+    background-color: #235789;
+    margin: 0;
+}
+footer p{
+    margin: 0;
+    color: white;
 }
 
 section{
