--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -2,28 +2,35 @@
     nav{
         display: flex;
         flex-direction: row;
-        
+        justify-content: center; 
+        background-color: #235789;
+        margin-top: 0;
     }
-    ul{
-        flex-direction: row;
+    nav ul{
+        margin: 0;
     }
     #menu{
         display: none;
     }
-
-    nav ul li{
-        margin: 0;
-        padding: 0;
-        flex: 1 1 100%;
-        color: white;
-        list-style: none;
+    .navigation{
+        flex-direction: row;
+        max-width: 100%;
+        padding-left: 0;
     }
-    
-    .navigation ul{
-        padding: 0;
-        margin: 0;
+    .navigation li{
+        display: block;
         list-style-type: none;
         flex-direction: row;
-        width: 100%;
+        background-color: #235789;
+        
     } 
+    .navigation li a{
+        padding: 1rem;
+        padding-top: 0;
+    }
+    .navigation li a:hover{
+        padding: 1rem;
+        padding-top: 0;
+        background-color: #34618c;
+    }
 }
