--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -36,7 +36,7 @@ nav{
     grid-row: 1/2;
     display: flex;
     flex-direction: column;
-    min-width: none;
+    min-width: 0;
     width: 100%;
     height: 100%;
     text-align: center;
@@ -127,7 +127,6 @@ nav ul{
     padding: 5px;
     background-color: #F5DEB3;
     color: #000;
-    position: left;
     float: left;
     margin-right: 0;
     width: 10%;
