--- a/styles/larger.css
+++ b/styles/larger.css
@@ -50,7 +50,7 @@
         justify-items: center;
     }
 
-    #nav-menu{
+    .nav{
         font-size: 1rem;
         background-color: #313D41;
         color: #fff;
