--- a/styles/base.css
+++ b/styles/base.css
@@ -8,29 +8,18 @@ body{
 header{
     background-color: #add8e6;
     display: block;
-    display: grid;
-    grid-template-columns: 20% 80%;
-    justify-content: center;
     margin: 0;
     
 }
 
-header .call-to-action{
-    margin: 0;
-    padding: 0;
-}
-
-header img{
+header h1 img{
     width: 100%;
     height: auto;
-    grid-column: 1/2;
+    /* grid-column: 1/2; */
     grid-row: 1;
     padding: 0;
 }
-header #hero-img{
-    padding: 0;
-    margin: 0;
-}
+
 h1{
     font-family: 'Passion One', sans-serif;
     text-align: center;
@@ -49,19 +38,28 @@ h2, h3, p{
 }
 nav{
     display: flex;
-    min-width: none;
-    width: 100%;
+    flex-direction: column;
+    min-width: 0;
+    max-width: 100%;
+    height: 100%;
     text-align: center;
+    list-style: none;
+    margin: 0;
 } 
+
+nav li{
+    list-style: none;
+}
 
 #menu{
     font-size: 1rem;
     border: 1px solid #6D9CCF;
     background-color: #fff;
-    float: right;
-    position: right;
-    margin-left: 0;
+    float: left;
+    margin-right: 0;
     padding: 3px 7px 9px;
+    height: 25px;
+    max-width: 30px;
 }
 #menu::before{
     content: "☰";
@@ -69,51 +67,32 @@ nav{
 #menu.open::before{
     content:"|||"
 }
-.nav{
+.navigation{
     display: flex;
 	flex-direction: column;
 	list-style: none;
 	background-color: #fff;
 	color: #000;
 }
-.nav li{
+.navigation li{
     display: none;
+    list-style: none;
 }
-nav ul{
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-    flex-direction: row;
-    width: 100%;
-} 
 
-nav ul li{
-    margin: 0;
-    padding: 0;
-    flex: 1 1 100%;
-    color: white;
-}
-nav a{
-   
-    color: #313D41;
+.navigation li a{
+    display: block;
+    padding: 1rem;
+    text-align: center;
     text-decoration: none;
+    color: black;
 }
-a:hover{
+.navigation li a:hover{
     border: 3px solid slategrey;
-    background-color: slategray;
-}
-main{
-    display: grid;
-    gap: 10px;
-}
-section ul{
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
 }
 
 .open li{
     display: block;
+    list-style: none;
     width: 100%;
 }
 
@@ -128,6 +107,17 @@ section ul{
 .active{
     border: 1px solid white;
 }
+main{
+    display: grid;
+    gap: 10px;
+}
+section ul{
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+
 
 footer{
     text-align: center;
@@ -147,4 +137,11 @@ footer{
     text-decoration: none;
     color: #363636;
 } 
+
+/* Dark mode button */
+#dark-mode{
+    position: absolute;
+    cursor: pointer;
+    
+}
 
