--- a/styles/larger.css
+++ b/styles/larger.css
@@ -9,32 +9,35 @@
     header{
         grid-row: 1/2;
         background-color: lightblue;
-        display: grid;
-        align-items: center;
-        justify-content: center; 
-        grid-template-columns: 80% 20%;
-        grid-row: 1/2;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
     header h1{
         grid-column: 1/2;
     }
 
     header button{
-        grid-column: 1/2;
         width: 50%;
         height: auto;
-        grid-row: 1/2;
-       
+        margin: 25px;
+        position: absolute;
+        top: 10%;
+        left: 50%;
+        transform: translate(-50%, -50%); 
+        background-color: #235789;
+        border-radius: 10px;
+        width: 100px;
+        height: 25px;
     }
-    header img{
-        width: 100%;
-        height: 100%;
+     header img{
+        width: auto;
+        height: 50%;
         padding: 0;
         margin: 0;
-        grid-column: 2/3;
-        grid-row: 1/2;
-        margin: 10px;
+        
     }
+    
     nav{
         grid-row: 2/3;
         max-width: 100%;
