--- a/styles/base.css
+++ b/styles/base.css
@@ -3,20 +3,19 @@ body{
     padding: 0;
     box-sizing: border-box;
     display: grid;
-    
+    overflow-x: hidden;
+    min-width: 100%;
 }
 header{
     background-color: #add8e6;
     display: block;
     margin: 0;
-    
+    align-items: center;
 }
 
-header h1 img{
+header img{
     width: 100%;
     height: auto;
-    /* grid-column: 1/2; */
-    grid-row: 1;
     padding: 0;
 }
 
@@ -140,8 +139,6 @@ footer{
 
 /* Dark mode button */
 #dark-mode{
-    position: absolute;
-    cursor: pointer;
-    
+    margin: auto;
 }
 
