--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -4,6 +4,13 @@ body{
     padding: 0;
 }
 
+h1, h3{
+    font-family: Helvetica, Arial, sans-serif;
+}
+p{
+    font-family: Garamond;
+}
+
 header{
     grid-row: 2/3;
     width: 100%;
