--- a/styles/base.css
+++ b/styles/base.css
@@ -27,6 +27,7 @@ h1{
 }
 main h2{
     color: #313D41;
+    padding: 10px;
 }
 h2, h3, p{
     padding: 0;
@@ -38,12 +39,7 @@ h2, h3, p{
 nav{
     display: flex;
     flex-direction: column;
-    min-width: 0;
-    max-width: 100%;
-    height: 100%;
-    text-align: center;
-    list-style: none;
-    margin: 0;
+   
 } 
 
 nav li{
@@ -67,11 +63,17 @@ nav li{
     content:"|||"
 }
 .navigation{
-    display: flex;
+    /* display: flex; */
 	flex-direction: column;
 	list-style: none;
 	background-color: #fff;
 	color: #000;
+    min-width: 0;
+    max-width: 100%;
+    height: 100%;
+    text-align: center;
+    list-style: none;
+    margin: 0;
 }
 .navigation li{
     display: none;
@@ -107,8 +109,9 @@ nav li{
     border: 1px solid white;
 }
 main{
-    display: grid;
+    /* display: grid; */
     gap: 10px;
+    margin: 10px;
 }
 section ul{
     padding: 0;
