--- a/styles/base.css
+++ b/styles/base.css
@@ -1,24 +1,52 @@
+
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    display: grid;
+    /* display: grid; */
     overflow-x: hidden;
     min-width: 100%;
+    height: 100vh;
 }
-header{
+/* header{
     background-color: #add8e6;
     display: block;
-    margin: 0;
-    align-items: center;
-}
+ 
+} */
 
 header img{
-    width: 100%;
+    width: 20%;
     height: auto;
     padding: 0;
+    margin: 0;
+} 
+header{
+    /* grid-row: 1/2; */
+    background-color: lightblue;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0;
+    align-items: center;
+    height: 25%;
+}
+header h1{
+    width: 25%;
+    margin: 10px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
+header button{
+    width: 25%;
+    height: 10px;
+    margin: 0;
+    background-color: #235789;
+    border-radius: 10px;
+    width: 90px;
+    height: 25px;
+}
 h1{
     font-family: 'Passion One', sans-serif;
     text-align: center;
@@ -134,6 +162,7 @@ footer{
     background-color: lightblue;
     color:#313D41;
     text-align: center;
+    margin: 10px;
 }
 .card a{
     text-decoration: none;
@@ -142,6 +171,6 @@ footer{
 
 /* Dark mode button */
 #dark-mode{
-    margin: auto;
+    margin: 0;
 }
 
