--- a/week03/styles/style.css
+++ b/week03/styles/style.css
@@ -1,9 +1,8 @@
 main{
-    display: flex;
-    flex-direction: column;
+    display: block;
 }
 
-picture img{
+img{
     width: 100%;
     height: auto;
     background-color: black;
