--- a/week03/styles/style.css
+++ b/week03/styles/style.css
@@ -1,8 +1,10 @@
-main picture img{
-    display: block;
+main{
+    display: grid;
+    grid-gap: 10px;
+    justify-content: center;
 }
 
-img{
+picture img{
     width: 100%;
     height: auto;
     background-color: black;
