--- a/styles/base.css
+++ b/styles/base.css
@@ -8,11 +8,6 @@ body{
     min-width: 100%;
     height: 100vh;
 }
-/* header{
-    background-color: #add8e6;
-    display: block;
- 
-} */
 
 header img{
     width: 20%;
@@ -137,7 +132,7 @@ nav li{
     border: 1px solid white;
 }
 main{
-    /* display: grid; */
+    
     gap: 10px;
     margin: 10px;
 }
@@ -146,12 +141,30 @@ section ul{
     margin: 0;
     list-style-type: none;
 }
+picture{
+    grid-column: 1/3;
+}
+picture img{
+    margin: 0;
+    width: 100%;
+    height: auto;
+}
 
-
+picture #temple-name{
+    position: absolute;
+    top: 50%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    color: white;
+    background-color: #235789;
+    text-align: center;
+    border-radius: 25%;
+}
 
 footer{
     text-align: center;
     width: 100%;
+    
 }
 
 /* Class selectors */
@@ -162,7 +175,7 @@ footer{
     background-color: lightblue;
     color:#313D41;
     text-align: center;
-    margin: 10px;
+    margin: 5px;
 }
 .card a{
     text-decoration: none;
@@ -172,5 +185,13 @@ footer{
 /* Dark mode button */
 #dark-mode{
     margin: 0;
+}
+
+/* Map */
+#ririe-map{
+    grid-column: 1/3;
+    margin:3%;
+    width: 100%;
+    height: 100%;
 }
 
