--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,13 +1,14 @@
 @media screen and (min-width: 512px) {
     body{
-        display: grid;
-        grid-template-rows: 30% 2.5% 65% 2.5%;
+        /* display: grid;
+        grid-template-rows: 30% 5% 60% 5%; */
+        display: block;
         margin: 0;
         padding: 0;
         height: 100vh;
     }
     header{
-        /* grid-row: 1/2; */
+      
         background-color: lightblue;
         display: flex;
         flex-wrap: nowrap;
@@ -16,7 +17,7 @@
         height: auto;
     }
     header h1{
-        width: 25%;
+       width: 25%;
        margin: 0;
     }
 
@@ -38,15 +39,15 @@
         margin: 0;
     }
      header img{
-        width: auto;
-        height: 50%;
+        width: 20%;
+        height: 20%;
         padding: 0;
         margin: 0;
         
     }
     
     nav{
-        grid-row: 2/3;
+        
         max-width: 100%;
         height: 20px;
         background-color: #313D41;
@@ -97,24 +98,49 @@
     main{
         margin: 0;
         display: grid;
-        grid-row: 3/4;
-        grid-template-rows: 10% 80%;
         width: 100%;
-        gap: 20px;
+        gap: 10px;
+        padding: 0;
     }
     main h3{
         margin: 10%;
-    }
 
+    }
+    picture{
+        grid-column: 1/3;
+        grid-row: 2/3;
+        margin: 0;
+        width: 100%;
+    }
+    picture img{
+        margin: 0;
+        width: 100%;
+        height: auto;
+        max-width: 100%;
+        max-height: 100%;
+    }
+    picture #temple-name{
+        position: absolute;
+        top: 80%;
+        left: 20%;
+        transform: translate(-50%, -50%);
+        color: white;
+        background-color: #235789;
+        text-align: center;
+        border-radius: 50%;
+        font-size: large;
+        padding: 10px;
+    }
     section h2{
         color: #313D41;
         width: 100%;
         grid-row: 2/3;
+        padding: 0;
+        margin: 0;
     }
     main h2{
         grid-column: 1/3;
         color: #313D41;
-        
     }
     #learning-activity{
         text-align: center;
@@ -124,21 +150,20 @@
     #info{
        
        text-align: center;
-        grid-column: 2/3;
+       grid-column: 2/3;
     }
 
     .card{
-    
         width: 100%;
         height: 100%;
-        grid-row: 2/4;
+        grid-row: 3/4;
     }
     footer{
-        margin-top: 10px;
-        grid-row: 4/5;
+       padding: 15px;
+       margin: 15px;
+       text-align: center;
     }
-    
-
+   
 }
 
 
