--- a/styles/base.css
+++ b/styles/base.css
@@ -150,7 +150,7 @@ picture img{
     height: auto;
 }
 
-picture #temple-name{
+#temple-name{
     position: absolute;
     top: 50%;
     left: 20%;
@@ -158,7 +158,8 @@ picture #temple-name{
     color: white;
     background-color: #235789;
     text-align: center;
-    border-radius: 25%;
+    border-radius: 50%;
+    padding: 10px;
 }
 
 footer{
