--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -2,6 +2,8 @@ body{
     /* grid-template-columns: 4; */
     margin: 0;
     padding: 0;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 h1, h3{
@@ -24,7 +26,7 @@ header{
 
 header img{
     width: 100%;
-    height: 100%;
+    height: auto;
     padding: 0;
     margin: 0;
     
@@ -63,7 +65,7 @@ h1{
 main{
     grid-row: 3/4;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 footer{
@@ -80,6 +82,7 @@ footer p{
 section{
     display: flex;
     flex-wrap: wrap;
+  
     background-color: #F5DEB3;
     margin: 2%;
     padding: 5px;
@@ -113,7 +116,7 @@ nav ul{
 }
 
 .navigation li a:hover{
-    background-color: #F5DEB3;
+    background-color: #2d70af;
     color: black;
     font-weight: 700;
 }
@@ -156,6 +159,11 @@ nav ul{
     border: 1px solid white;
 }
 
+/* Call to action */
+.call-to-action{
+    margin: 0;
+}
+
 /* Join button */
 #join{
     position: absolute;
@@ -167,5 +175,5 @@ nav ul{
     width: 100px;
     height: 25px;
     font-size: 20px;
-    color: #F5DEB3;
+    color: white;
 }
