--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -9,6 +9,11 @@
     nav ul{
         margin: 0;
     }
+    main{
+        grid-row: 3/4;
+        display: flex;
+        flex-direction: row;
+    }
     #menu{
         display: none;
     }
@@ -22,15 +27,33 @@
         list-style-type: none;
         flex-direction: row;
         background-color: #235789;
-        
+        margin: 0;
     } 
     .navigation li a{
         padding: 1rem;
-        padding-top: 0;
+        
     }
     .navigation li a:hover{
         padding: 1rem;
-        padding-top: 0;
-        background-color: #34618c;
+        color: whitesmoke;
+        background-color: #2d72b2;
+    }
+    header img{
+        width: 100%;
+        height: 50%;
+        padding: 0;
+        margin: 0;
+    }
+
+    #temple-name{
+        position: absolute;
+        top: 70%;
+        left: 20%;
+        transform: translate(-50%, -50%);
+        color: white;
+        background-color: #235789;
+        text-align: center;
+        border-radius: 50%;
+        padding: 10px;
     }
 }
