--- a/styles/base.css
+++ b/styles/base.css
@@ -5,7 +5,7 @@ body{
     box-sizing: border-box;
     /* display: grid; */
     overflow-x: hidden;
-    min-width: 100%;
+    max-width: 100%;
     height: 100vh;
 }
 
@@ -51,6 +51,8 @@ h1{
 main h2{
     color: #313D41;
     padding: 10px;
+    grid-row: 1/2;
+    text-align: center;
 }
 h2, h3, p{
     padding: 0;
@@ -141,19 +143,23 @@ section ul{
     margin: 0;
     list-style-type: none;
 }
+
+
 picture{
     grid-column: 1/3;
+    grid-row: 2/3;
+    max-width: 100%;
 }
-picture img{
+#temple-img{
     margin: 0;
-    width: 100%;
+    max-width: 100%;
     height: auto;
 }
 
 #temple-name{
     position: absolute;
-    top: 50%;
-    left: 20%;
+    top: 60%;
+    left: 30%;
     transform: translate(-50%, -50%);
     color: white;
     background-color: #235789;
@@ -168,6 +174,17 @@ footer{
     
 }
 
+/* Cards */
+#learning-activity{
+    width: 100%;
+    grid-row: 3/4;
+}
+
+#info{
+    width: 100%;
+    grid-row: 4/5;
+}
+
 /* Class selectors */
 .card h3{
     color: #313D41;
@@ -176,12 +193,14 @@ footer{
     background-color: lightblue;
     color:#313D41;
     text-align: center;
-    margin: 5px;
+    width: 100%;
+    grid-column: 1/3;
 }
 .card a{
     text-decoration: none;
     color: #363636;
 } 
+
 
 /* Dark mode button */
 #dark-mode{
@@ -192,9 +211,9 @@ footer{
 /* Map */
 #ririe-map{
     grid-column: 1/3;
-    margin:3%;
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    height: auto;
+    margin: 0;
 }
 
 /* Sidebar */
