--- a/week01/styles/site-plan.css
+++ b/week01/styles/site-plan.css
@@ -17,8 +17,8 @@ h1{
     background-color: #F5DEB3;
 }
 h1{
-    font-family: sans-serif;
+    font-family: 'Tenor Sans', sans-serif;;
 }
 p{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Inter', sans-serif;
 }
