--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -34,7 +34,7 @@ header img{
 
 header h3{
     position: absolute;
-    top: 25%;
+    top: 22%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
@@ -64,8 +64,7 @@ h1{
 
 main{
     grid-row: 3/4;
-    display: flex;
-    flex-direction: column;
+    display: grid;
 }
 
 footer{
@@ -82,16 +81,61 @@ footer p{
 section{
     display: flex;
     flex-wrap: wrap;
-  
     background-color: #F5DEB3;
     margin: 2%;
     padding: 5px;
     justify-content: center;
+    height: 100%;
 }
 nav ul{
     list-style: none;
     text-align: left;
 }
+
+/* Sidebar */
+.sidebar{
+    display: flex;
+    flex-direction: column;
+}
+
+.sidebar section{
+    display: block;
+    grid-column: 1/2;
+    grid-row: 1/3;
+    text-align: center;
+    padding: 5px;
+    height: 100%;
+    background-color: #235789;
+    
+}
+.sidebar ul{
+    list-style: none;
+    padding: none;
+    margin: none;
+}
+.sidebar li{
+    margin: none;
+    padding: none;
+}
+.sidebar section h3{
+    color: #fff;
+
+}
+/* Picture column */
+
+#picture-column{
+    grid-column: 2/3;
+    grid-row: 1/3;
+    margin: 0;
+    padding: 0;
+    width: 1005;
+}
+#picture-column img{
+    width: 100%;
+    height: auto;
+    padding: 10px;
+}
+
 /* Button */
 
 .navigation{
@@ -176,4 +220,17 @@ nav ul{
     height: 25px;
     font-size: 20px;
     color: white;
+}
+
+#join-discover{
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        transform: translate(-50%, -50%); 
+        background-color: #235789;
+        border-radius: 10px;
+        width: 100px;
+        height: 25px;
+        font-size: 20px;
+        color: white;
 }
