--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -14,6 +14,11 @@
         display: flex;
         flex-direction: row;
     }
+   
+    .discover-main{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
     #menu{
         display: none;
     }
@@ -56,4 +61,35 @@
         border-radius: 50%;
         padding: 10px;
     }
+
+    /* Sidebar */
+.sidebar{
+   
+    color: white;
+}
+
+.sidebar section{
+    display: block;
+    grid-column: 1/2;
+    text-align: center;
+    padding: 5px;
+    height: 100%;
+    background-color: #235789;
+}
+.sidebar section h3{
+    padding: 5px;
+    color: #fff;
+}
+
+/* Picture column */
+
+#picture-column{
+    grid-column: 2/3;
+    grid-row: 1/3;
+}
+#picture-column img{
+    width: 80%;
+    height: auto;
+    padding: 10px;
+}
 }
