--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -69,12 +69,14 @@
 }
 
 .sidebar section{
-    display: block;
+    display: flex;
+    flex-direction: column;
     grid-column: 1/2;
     text-align: center;
     padding: 5px;
     height: 100%;
     background-color: #235789;
+    justify-items: center;
 }
 .sidebar section h3{
     padding: 5px;
@@ -84,6 +86,7 @@
 /* Picture column */
 
 #picture-column{
+    display: grid;
     grid-column: 2/3;
     grid-row: 1/3;
 }
