--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 32em) {
+@media only screen and (min-width: 784) {
     nav{
         display: flex;
         flex-direction: row;
@@ -17,7 +17,7 @@
    
     .discover-main{
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 4fr;
     }
     #menu{
         display: none;
@@ -44,7 +44,7 @@
         background-color: #2d72b2;
     }
     header img{
-        width: 100%;
+        width: 8=100%;
         height: 50%;
         padding: 0;
         margin: 0;
@@ -91,8 +91,23 @@
     grid-row: 1/3;
 }
 #picture-column img{
-    width: 80%;
+    width: 60%;
     height: auto;
     padding: 10px;
 }
+}
+
+.row1{
+    display: flex;
+    flex-direction: row;
+}
+
+.row2{
+    display: flex;
+    flex-direction: row;
+}
+
+.row3{
+    display: flex;
+    flex-direction: row;
 }
