--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 784) {
+@media only screen and (min-width: 784px) {
     nav{
         display: flex;
         flex-direction: row;
