--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,5 +1,4 @@
 body{
-    /* grid-template-columns: 4; */
     margin: 0;
     padding: 0;
     max-width: 100%;
@@ -97,21 +96,6 @@ nav ul{
     display: flex;
     flex-direction: column;
 }
-
-/* .row1{
-    display: flex;
-    flex-direction: column;
-}
-
-.row2{
-    display: flex;
-    flex-direction: column;
-}
-
-.row3{
-    display: flex;
-    flex-direction: column;
-} */
 
 .sidebar section{
     display: block;
@@ -265,4 +249,72 @@ nav ul{
         height: 25px;
         font-size: 20px;
         color: white;
+} 
+
+/* Join Page */
+form{
+    border:#2d70af solid 3px;
+    margin: 5px;
+}
+form h3{
+    text-align: center;
+}
+form input{
+    display: block;
+    height: 44px;
+    width: 100%;
+    margin: .75em;
+    margin-left: 0;
+    max-height: 100%;
+    height: 44px;
+    font-size: 1rem;
+    border-radius: 4px;
+    padding: .75rem;
+    width: 100%;
+    max-width: 20rem;
+    background-color:rgba(0, 0, .1, .1);
+}
+
+form input:required{
+    background-color: 3px solid red;
+}
+form input:required:valid{
+    border-color: 3px solid #235789;
+}
+
+section{
+    height: 30%;
+    margin: 1%;
+}
+
+fieldset{
+    border: none;
+}
+
+.join-main{
+    display: flex;
+    flex-direction: column;
+}
+
+label{
+   display: inline-block;
+}
+
+input[type="radio"]{
+    margin: 0;
+    padding: 0;
+    height: 22px;
+}
+
+span{
+    display: flex;
+    flex-direction: column;
+}
+
+button{
+    background-color: #235789;
+    border-radius: 10px;
+    width: 100px;
+    height: 35px;
+    color: white;
 }
