--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 784px) {
+@media only screen and (min-width: 32em) {
     nav{
         display: flex;
         flex-direction: row;
@@ -111,3 +111,10 @@
     display: flex;
     flex-direction: row;
 }
+
+/* Join Page */
+.join-main{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
