--- a/week04/form-start/styles/base.css
+++ b/week04/form-start/styles/base.css
@@ -78,7 +78,7 @@ form label.top, form div{
 }
 
 form label.top input, form label.top select{
-    -webkit-appearance: none;
+    appearance: none;
     display:block;
     font-size: 1rem;
     border: solid 1px #999;
@@ -111,7 +111,7 @@ form label.top input:required{
     border-left: red solid 6px;
 }
 form label.top input:required:valid{
-    border-left: green solid 1px;
+    border-left: green solid 6px;
 }
 /*----------- FOOTER --------------*/
 footer {
