--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -118,3 +118,25 @@
     grid-template-columns: 1fr 1fr;
 }
 
+form input{
+    display: flex;
+    flex-direction: column;
+    height: 44px;
+    width: 100%;
+    margin: .75em;
+    margin-left: 0;
+    max-height: 100%;
+    height: 44px;
+    font-size: 1rem;
+    border-radius: 4px;
+    padding: .75rem;
+    width: 100%;
+    max-width: 20rem;
+    background-color:rgba(0, 0, .1, .1);
+}
+
+label{
+    display: flex;
+    flex-direction: column;
+    margin: 5%;
+ }
