--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -276,10 +276,10 @@ form input{
 }
 
 form input:required{
-    background-color: 3px solid red;
+    border: 3px solid red;
 }
 form input:required:valid{
-    border-color: 3px solid #235789;
+    border: 3px solid #235789;
 }
 form label{
     font-size: 16px;
@@ -315,7 +315,6 @@ input[type="radio"]{
 }
 #radio-buttons input{
     margin: 0;
-
 }
 
 button{
@@ -328,4 +327,16 @@ button{
 #join-main .membership section{
     display: flex;
     flex-direction: column;
+}
+
+#membership-level{
+    font-size: 24px;
+    padding-left: 5px;
+    margin-bottom: 0;
+    text-decoration: underline;
+}
+
+#button-field{
+    grid-column: 1/3;
+    margin: 0 auto;
 }
