--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,4 +1,5 @@
-@media only screen and (min-width: 32em) {
+@media only screen and (min-width: 32em) 
+{
     nav{
         display: flex;
         flex-direction: row;
@@ -95,25 +96,9 @@
     height: auto;
     padding: 10px;
 }
-}
-
-.row1{
-    display: flex;
-    flex-direction: row;
-}
-
-.row2{
-    display: flex;
-    flex-direction: row;
-}
-
-.row3{
-    display: flex;
-    flex-direction: row;
-}
-
 /* Join Page */
-.join-main{
+
+form{
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -135,16 +120,50 @@ form input{
     background-color:rgba(0, 0, .1, .1);
 }
 
+form fieldset{
+    grid-column: 1/2;
+    /* grid-row: 1/2; */
+}
+
 label{
     display: flex;
     flex-direction: column;
     margin: 5%;
+ }
+
+ h1{
+    grid-column: 1/3;
+    grid-row: 1/2;
+    text-align: center;
  }
 .membership section{
     display: flex;
     flex-direction: column;
     text-align: center;
 }
+
+.membership{
+    grid-column: 2/3;
+    grid-row: 2/3;
+
+}
 .membership ul{
     list-style: none;
 }
+}
+
+/* .row1{
+    display: flex;
+    flex-direction: row;
+}
+
+.row2{
+    display: flex;
+    flex-direction: row;
+}
+
+.row3{
+    display: flex;
+    flex-direction: row;
+} */
+
