--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -109,8 +109,8 @@ nav ul{
 }
 .sidebar ul{
     list-style: none;
-    padding: none;
-    margin: none;
+    padding: 0;
+    margin: 0;
 }
 .sidebar li{
     margin: none;
@@ -340,3 +340,60 @@ button{
     grid-column: 1/3;
     margin: 0 auto;
 }
+
+/* Directory */
+
+.cards{
+    display: flex;
+    justify-items: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* .grid img {
+	border: 1px solid #fff;
+	box-shadow: 0 0 10px #333;
+} */
+
+.directory-main{
+    max-width: 100%;
+    align-items: center;
+    margin: 0 auto;
+    max-height: 100%;
+}
+
+.directory-main header, footer{
+    grid-column: 1/3;
+    grid-row: 2/3;
+}
+
+.directory-main section img {
+    width: auto;
+    max-width: 300px;
+    box-shadow: 0 0 30px #000;
+    height: 250px;
+    margin: auto;
+}
+.directory-main button{
+    width: 100%;
+}
+
+.directory-main section{
+    background-color: #235789; 
+    color: aliceblue;
+    display: flex;
+    flex-direction: column; 
+    width: 100%;
+    text-align: center;
+    margin: 5px;
+}
+
+#directory-body{
+    overflow-x: hidden;
+}
+
+#directory-footer{
+    width: 100%;
+    margin: 0%;
+}
+
