--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -150,6 +150,54 @@ label{
 .membership ul{
     list-style: none;
 }
+
+/* Directory */
+
+.cards{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    align-items: center;
+    max-width: 100%;
+}
+
+.grid img {
+	border: 1px solid #fff;
+	box-shadow: 0 0 10px #333;
+}
+
+.directory-main{
+    max-width: 100%;
+    align-items: center;
+    margin: 0 auto;
+    display: grid;
+}
+
+.directory-main img{
+    width: auto;
+    max-width: 300px;
+    box-shadow: 0 0 30px #000;
+    height: 250px;
+    
+}
+.directory-main button{
+    width: 100%;
+}
+
+.directory-main section{
+    background-color: #235789; 
+    color: aliceblue;
+    display: flex;
+    flex-direction: row; 
+    max-width: 100%;
+    text-align: center;
+    margin: 10px;
+}
+
+#directory-footer{
+    width: 100%;
+    margin: 0%;
+
+}
 }
 
 /* .row1{
