--- a/week05/prophets.css
+++ b/week05/prophets.css
@@ -1,7 +1,8 @@
 #cards{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     align-items: center;
+    width: 100%;
 }
 
 header, footer{
