--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -67,6 +67,7 @@
 .sidebar{
     /* display: flex; */
     color: white;
+    width: 30%;
 }
 
 .sidebar section{
@@ -94,12 +95,18 @@
         grid-column: 2/3;
         grid-row: 2/3;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(600px, 2fr));
-        width: 100%;
-        height: 50%;
-        padding-top: 0;
+        grid-template-columns: 2fr 2fr;
+        grid-gap: 5px;
+        width:fit-content;
+        margin-top: 10px;
+        margin: 10px 10px;
+        padding: 10px;
+        padding-right: 10px;
         justify-self: center;
-        background-color: #F5DEB3;
+        background-color: #235789;
+        box-sizing: border-box;
+        overflow: hidden;
+        height:fit-content;
     }
 }
 .picture-column img{
