--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -6,7 +6,7 @@ body{
     
 }
 
-h1, h3{
+h1, h2, h3{
     font-family: 'Tenor Sans', sans-serif;
 }
 p{
@@ -57,10 +57,10 @@ nav a{
 }
 
 
-h1{
+/* h1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin: 0;
-}
+} */
 
 main{
     grid-row: 3/4;
@@ -238,6 +238,10 @@ nav ul{
 /* Call to action */
 .call-to-action{
     margin: 0;
+    position:absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-45%, -50%); 
 }
 
 /* Join button */
@@ -246,7 +250,7 @@ nav ul{
 }
 #join{
     position: absolute;
-    top: 35%;
+    /* top: 35%; */
     left: 50%;
     transform: translate(-50%, -50%); 
     background-color: #235789;
