--- a/styles/base.css
+++ b/styles/base.css
@@ -150,14 +150,22 @@ picture{
     grid-row: 2/3;
     max-width: 100%;
 }
-#temple-img{
+.temple{
+    width: 100%;
+    grid-column: 1/3;
+    position: relative;
+    display: block;
+}
+.temple #temple-img{
+    
     margin: 0;
     max-width: 100%;
     height: auto;
 }
 
-#temple-name{
+#temple-name {
     position: absolute;
+    transform: translate(-100%);
     color: white;
     background-color: #235789;
     text-align: center;
