--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -50,6 +50,7 @@ nav{
     text-align: center;
     list-style: none;
     margin: 0;
+    z-index: 2;
 } 
 
 nav a{
@@ -182,6 +183,7 @@ header h1
 	list-style: none;
 	background-color: #fff;
 	color: #000;
+    z-index: 2;
 }
 
 .navigation li{
@@ -310,6 +312,7 @@ header h1
 form{
     border:#2d70af solid 3px;
     margin: 5px;
+   
 }
 form h3{
     text-align: center;
