--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -270,6 +270,16 @@ label{
 #three-day-div div{
     margin:10px;
 }
+
+#old-and-new-Ririe{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+#our-town h3{
+    width: 100%;
+}
 }
 
 /* .row1{
