--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -438,7 +438,7 @@ button{
     max-width: 100%;
     align-items: center;
     margin: 0 auto;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .directory header, footer{
