--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -13,7 +13,7 @@ body{
 h1, h2, h3, figcaption{
     font-family: 'Tenor Sans', sans-serif;
 }
-p{
+p, h4{
     font-family: 'Inter', sans-serif;
 }
 
